# Alps

./: CMakeLists.txt  README.md
Gran_Paradiso/: Gran_Paradiso.cpp  Gran_Paradiso_builder.cxx  Gran_Paradiso_builder.h
ITK/Modules/Core/ImageFunction/include/: itkReLUInterpolateImageFunction.h  itkReLUInterpolateImageFunction.hxx
ITK/Modules/Core/ImageFunction/test/: itkReLUInterpolateImageFunctionTest.cxx
ITK/Modules/Core/ImageFunction/wrapping/: itkReLUInterpolateImageFunction.wrap
Mont_Blanc/: Mont_Blanc.cpp  Mont_Blanc_builder.cxx  Mont_Blanc_builder.h
Mont_Maudit/: Mont_Maudit.cpp  Mont_Maudit_builder.cxx  Mont_Maudit_builder.h
Monte_Rosa/: Monte_Rosa.cpp  Monte_Rosa_builder.cu  Monte_Rosa_builder.cuh  Monte_Rosa_builder.cxx  Monte_Rosa_builder.h
NN/: AlpsConvolutionLayer.h  AlpsFullyConnectedLayer.h  AlpsLayer.h  AlpsLayerBase.h  AlpsLayerDependencies.h  AlpsMountain.h  AlpsMountainDummy.cxx  AlpsMountainDummy.h  AlpsNeuralNetwork.h  AlpsNeuralNetworkComposite.cxx  AlpsNeuralNetworkComposite.h  AlpsReconstructionLayer.h  AlpsTransposedConvolutionLayer.h  AlpsWeights.h  Convolution.h  ConvolutionalAutoEncoder_layer.h  Convolutional_CUDA.cu  Convolutional_CUDA.cuh  Convolutional_layer.cxx  Convolutional_layer.h  Convolutional_layer_CUDA.cu  Convolutional_layer_CUDA.cuh  Convolutional_window.cxx  Convolutional_window.h  Deconvolutional_window.cxx  Deconvolutional_window.h  FullyConnected_layer.cxx  FullyConnected_layer.h  FullyConnected_layer_CUDA.cu  FullyConnected_layer_CUDA.cuh  NN_test.cu  NN_test.cxx  NN_test.h  NeuralNetwork.cuh  NeuralNetwork.h  NeuralNetworkComposite.cu  NeuralNetworkComposite.cuh  NeuralNetworkComposite.cxx  NeuralNetworkComposite.h  Weights.cxx  (+1 more)
NN/Convolution/: AlpsWindow.h
NN/Functions/: Functions.h
NN/Gradients/: Gradient.h  SGD.h
NN/Weights/: AlpsWeights.h  AlpsWeightsConvolution.h  AlpsWeightsFcl.h  AlpsWeightsFclCPU.cxx  AlpsWeightsFclCPU.h  AlpsWeightsFullyConnected.h  AlpsWeightsReconstruction.h  AlpsWeightsTransposedConvolution.h  AlpsWindow.h
data/: data_set.json  data_set_GP.json  data_set_MB.json  data_set_MM.json
test/: CMakeLists.txt
test/data/: data_set_GP.json  neural_net.json
test/src/: CMakeLists.txt  testAlpsActivation.cpp  testAlpsActivation.h  testAlpsCVKFolds.cpp  testAlpsCVKFolds.h  testAlpsConvolutionWindow.cpp  testAlpsConvolutionWindow.h  testAlpsCostFunction.cpp  testAlpsCostFunction.h  testAlpsDeconvolutionWindow.cpp  testAlpsDeconvolutionWindow.h  testAlpsFullSamples.cpp  testAlpsFullSamples.h  testAlpsImage.cpp  testAlpsImage.h  testAlpsLayerTensors.cpp  testAlpsLayerTensors.h  testAlpsLoadDataSet.cpp  testAlpsSGD.cpp  testAlpsSGD.h  testAlpsSubject.cpp  testAlpsSubject.h  testAlpsSubjects.cpp  testAlpsTensor.cpp  testAlpsTensor.h  testAlpsWeightsFclCPU.cpp  testCVKFolds.cpp  testFullSamples.cpp  testITKFunctions.cpp  testITKFunctions.h  testImage.cpp  testLoadDataSet.cpp  testLoadDataSet.h  testSubject.cpp  testSubjectCPU.cpp  testSubjectCPU.h  testSubjects.cpp  testSubjects.h  testWeightsFclCPU.cpp  testWeightsFclCPU.h
utils/: AlpsClimber.h  AlpsImage.h  AlpsLayerTensors.h  AlpsLoadDataSet.cxx  AlpsLoadDataSet.h  AlpsMountain.h  AlpsSubject.h  AlpsSubjectCPU.h  AlpsSubjectGPU.h  AlpsSubjects.h  AlpsThreadDispatching.h  AlpsTools.h  ITKHeaders.h  MACException.h  MACLoadDataSet.cxx  MACLoadDataSet.h  MACMakeITKImage.cxx  MACMakeITKImage.h  Subject.cxx  Subject.h
utils/CrossValidation/: AlpsCVKFolds.h  AlpsCrossValidation.h  AlpsFullSamples.h  AlpsValidation.h  CrossValidation.h  CrossValidation_k_folds.h
utils/Functions/: Activations.h  AlpsActivations.h  AlpsBaseFunction.h  AlpsCostFunction.h  AlpsFunction.h  Functions.h  LossFunctions.h
utils/Gradients/: AlpsAdaDelta.h  AlpsAdaGrad.h  AlpsAdam.h  AlpsGradient.h  AlpsSGD.h
utils/basic/: AlpsTensor.h
